// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foldable component should render closed on toggle 1`] = `
<div
  class="container closed"
>
  <div
    class="icon-wrapper closed"
  >
    <i
      class="material-icons"
    >
      keyboard_arrow_right
    </i>
  </div>
  <div>
    my label
  </div>
  <div
    class="dots-wrapper"
  >
    •••
  </div>
</div>
`;

exports[`Foldable component should render open 1`] = `
<div
  class="container"
>
  <div
    class="icon-wrapper"
  >
    <i
      class="material-icons"
    >
      keyboard_arrow_down
    </i>
  </div>
  <div>
    my label
  </div>
  <div>
    <div>
      my children
    </div>
  </div>
</div>
`;
